eureka-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eureka
  name: eureka
spec:
  clusterIP: None
  ports:
  - name: http
    port: 8761
    protocol: TCP
    targetPort: 8761
  selector:
    app: eureka
  sessionAffinity: None
  type: ClusterIP
